# zeek-fluvio

./: CMakeLists.txt  README.md  configure
.github/workflows/: ci-tls.yml  ci.yml
scripts/Zeek/Fluvio/: __load__.zeek  init.zeek  logs-to-fluvio.zeek
src/: FluvioWriter.cc  FluvioWriter.h  Plugin.cc  Plugin.h  fluvio.bif
tests/: e2e.sh
tests/Traces/: ping.pcap
